--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "image-conversion": "^2.1.1",
     "lodash": "^4.17.19",
     "lowdb": "^1.0.0",
+    "mammoth": "^1.4.17",
     "node-rsa": "^1.1.1",
     "nprogress": "^0.2.0",
     "vant": "^2.8.5",
