--- a/package.json
+++ b/package.json
@@ -44,12 +44,15 @@
     "babel-plugin-import": "^1.13.0",
     "babel-plugin-lodash": "^3.3.4",
     "compression-webpack-plugin": "^4.0.0",
+    "less": "^3.0.4",
+    "less-loader": "^5.0.0",
     "lodash-webpack-plugin": "^0.11.5",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.3",
     "svg-sprite-loader": "^6.0.9",
     "vue-cli-plugin-element": "~1.0.1",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "vuedraggable": "^2.24.1"
   },
   "browserslist": [
     "> 1%",
