增加部分页面

--- a/.env.dev
+++ b/.env.dev
@@ -8,6 +8,6 @@ VUE_APP_RESOURCE_HOST=http://192.168.10.33:7000/
 VUE_APP_UEDITOR_SERVER_URL=http://192.168.10.33:7000/ueditor/upload/
 
 # 开发时默认登录账密
-VUE_APP_AUTH_LOGIN_ACCOUNT=admin
+VUE_APP_AUTH_LOGIN_ACCOUNT=yh.zhang
 VUE_APP_AUTH_LOGIN_PASSWORD=123456
 VUE_APP_AUTH_LOGIN_CODE=888888
