部分页面接入接口

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.doing-business.super",
+  "name": "com.stu-p3lab-front.super",
   "version": "1.5.8",
   "private": true,
   "scripts": {
