--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mammoth": "^1.4.17",
     "node-rsa": "^1.1.1",
     "nprogress": "^0.2.0",
+    "signature_pad": "^4.0.4",
     "vant": "^2.8.5",
     "vue": "^2.6.14",
     "vue-cookies": "^1.7.4",
