--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vue": "^2.6.14",
     "vue-cookies": "^1.7.4",
     "vue-countup-v2": "^4.0.0",
+    "vue-esign": "^1.1.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
     "xml-js": "^1.6.11"
