--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.5.8",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
     "dev": "vue-cli-service serve --mode dev",
     "prod": "vue-cli-service build --mode prod",
